--- a/Keras_model_logistical_regression.ipynb
+++ b/Keras_model_logistical_regression.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "3- Add more complexity to your models in (1) and (2) and compare with previous results\n",
     "\n",
-    "Got Help from Nathan Pal on this one!"
+    "Got Help from Nathan Pillai on this one!"
    ]
   },
   {
@@ -471,13 +471,7 @@
       "576/576 [==============================] - 1s 1ms/step - loss: 0.4845 - acc: 0.7639\n",
       "Epoch 83/100\n",
       "576/576 [==============================] - 1s 1ms/step - loss: 0.4841 - acc: 0.7691\n",
-      "Epoch 84/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 84/100\n",
       "576/576 [==============================] - 1s 1ms/step - loss: 0.4843 - acc: 0.7639\n",
       "Epoch 85/100\n",
       "576/576 [==============================] - 1s 1ms/step - loss: 0.4842 - acc: 0.7656\n",
